# grape

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
gpoe/: __main__.py  approximate_constraint_finder.py  automaton_generator.py  enumerator.py  evaluator.py  import_utils.py  partitions.py  program.py  regular_constraint_finder.py  tree_automaton.py  types.py
grape/: automaton_generator.py  dsl.py  enumerator.py  evaluator.py  partitions.py  program.py  types.py
grape/automaton/: automaton_manager.py  loop_manager.py  spec_manager.py  tree_automaton.py
grape/cli/: compile.py  convert.py  count.py  despecialize.py  dsl_loader.py  enum.py  info.py  intersection.py  prune.py  specialize.py  union.py
grape/pruning/: approximate_constraint_finder.py  commutativity_pruner.py  equivalence_class_manager.py  obs_equiv_pruner.py  regular_constraint_finder.py
tests/: test_dsl.py  test_enumerator.py  test_evaluator.py  test_types.py
tests/automaton/: test_loop_manager.py  test_spec_manager.py
tests/cli/: test_intersection.py  test_prune.py  test_union.py
