[project]
name = "grape"
version = "0.1.0"
description = "GRAmmar for Program synthEsis (GRAPE)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.67.1",
]


[project.scripts]
grape-compile = "grape.cli.compile:main"
grape-convert = "grape.cli.convert:main"
grape-count = "grape.cli.count:main"
grape-despecialize = "grape.cli.despecialize:main"
grape-enum = "grape.cli.enum:main"
grape-info = "grape.cli.info:main"
grape-intersection = "grape.cli.intersection:main"
grape-prune = "grape.cli.prune:main"
grape-specialize = "grape.cli.specialize:main"